# capture-rs

./: Cargo.toml
.github/workflows/: ci.yaml  test.yaml
client_capture/: Cargo.toml
client_capture/src/: event_stream.rs  lib.rs  mutation_stream.rs  observer.rs  rebuild.rs  replay.rs  snapshot.rs  types.rs  user_events.rs  utils.rs
examples/leptos-test/: Cargo.toml  README.md
examples/leptos-test/end2end/: package-lock.json  package.json  playwright.config.ts
examples/leptos-test/end2end/playwright-report/: index.html
examples/leptos-test/end2end/test-results/: .last-run.json
examples/leptos-test/src/: app.rs  main.rs
examples/leptos-test2/: Cargo.toml  README.md
examples/leptos-test2/src/: app.rs  main.rs
replay-server/: Cargo.toml  Docker-compose.yaml  Dockerfile  README.md
replay-server/src/: app.rs  main.rs
