
[workspace]
resolver = "2"
members = [
    "client_capture",
    "examples/leptos-test",
    "examples/leptos-test2",
    "replay-server",
]

[workspace.dependencies]
client_capture = {path = "./client_capture"}
bincode = "1.3.3"

# Defines a size-optimized profile for the WASM bundle in release mode
[profile.wasm-release]
inherits = "release"
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"